[package]
name = "hemoglobin"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]

[dependencies]
bit-vec = "0.4"
num = "0.1"
rand = "0.4"
rustty = "0.1"

[profile.dev]
opt-level = 1
debug = true
rpath = true
lto = false
debug-assertions = true
codegen-units = 4
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 4
panic = 'unwind'
