[package]
name = "hemoglobin"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]

[dependencies]
bit-vec = "0.5.0"
num = "0.2.0"
rand = "0.6.1"
rustty = "0.1.12"

[profile.dev]
opt-level = 1
debug = true
rpath = true
lto = false
debug-assertions = true
codegen-units = 4
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
